OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.4.2 (2018-05-13)
------------------
- ALL: renamed Source::getPaymentState() to Source::getPaymentStatus().
- ALL: Legend or summary are not required: Notice:  Undefined index: legend ...

5.4.1 (2018-05-13)
------------------
Important note:
- ALL: Version 5.4.0 has been released to solve some fatal errors for Magento.
  This has been done while not all the documentation had been finished yet, so
  more backwards incompatible changes (for developers) will be found in this
  5.4.1 version.

Changes:
- ALL: To "clean up" the appearance of the forms, especially the advanced config
  form, use of the html5 details tag has been introduced. A number of fieldsets
  are made collapsible/expandable and will be closed by default. PrestaShop does
  not support this tag, nor js collapsable fieldsets.
- ALL (MOST): Errors and warnings weren't shown when generated during saving the
  config.
- ALL: Not all curl libraries define the CURL_SSLVERSION_TLSv1_2 constant, even
  if they support that TLS version.
- HS: Trying to get property of non-object in Joomla\HikaShop\Invoice\Source.php
  on line 139
- ALL: Looked up vat rates were not copied from parent to children.
- ALL: Config form now also displays the exception message when an exception
  was raised.
- WC: update_option() also returns false when there are no changes. We want to
  return true to prevent a user message "There was an error saving the config".
- ALL: As a consequence of documenting this library from a developers view
  point, non backwards compatible changes were made that simplify or reduce the
  amount of code that needs to be written when developing a new extension: