@@ -163,7 +163,7 @@ abstract class Source extends BaseSource
      * This override provides the values meta-invoice-amountinc and
      * meta-invoice-vatamount.
      */
-    public function getTotals()
+    protected function getAvailableTotals()
     {
         $sign = $this->getSign();
         return array(
