@@ -296,7 +296,7 @@ class Creator extends BaseCreator
             );
 
             // Add these amounts to the invoice totals.
-            // @see \Siel\Acumulus\PrestaShop\Invoice\Creator\getInvoiceTotals()
+            // @see \Siel\Acumulus\Invoice\Source\getTotals()
             $this->invoice[Tag::Customer][Tag::Invoice][Meta::InvoiceAmountInc] += $paymentInc;
             $this->invoice[Tag::Customer][Tag::Invoice][Meta::InvoiceAmount] += $paymentEx;
             return $result;
